RESOLVED FIXED287597
[UnifiedPDF] [iOS] Tapping on anchor link does not clear existing selection
https://bugs.webkit.org/show_bug.cgi?id=287597
Summary [UnifiedPDF] [iOS] Tapping on anchor link does not clear existing selection
Abrar Rahman Protyasha
Reported 2025-02-12 17:14:45 PST
Attachments
Abrar Rahman Protyasha
Comment 1 2025-02-13 15:14:08 PST
EWS
Comment 2 2025-02-13 22:58:38 PST
Committed 290390@main (483990ae5b77): <https://commits.webkit.org/290390@main> Reviewed commits have been landed. Closing PR #40589 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.