[UnifiedPDF] [iOS] Tapping on anchor link does not clear existing selection https://bugs.webkit.org/show_bug.cgi?id=287597 rdar://144742522

Reviewed by Wenson Hsieh.

This patch aligns us better with text selection behavior in web content
for touch taps on iOS, by dismissing an existing selection if we tap on
an annotation.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::handleSyntheticClick):
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm:
(TestWebKitAPI::UNIFIED_PDF_TEST):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/anchorLink.pdf: Added.

Canonical link: https://commits.webkit.org/290390@main